# SeetaFace6-JNI

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JNIFaceDetector.cpp  JNIFaceDetector.h  JNIFaceLandmarker.cpp  JNIFaceRecognizer.cpp  JNIQualityOfPoseEx.cpp  JNIQualityOfPoseEx.h
app/src/main/java/com/seeta/sdk/: FaceDetector.java  FaceRecognizer.java  FileUtils.java  MainActivity.java  QualityOfBrightness.java  QualityOfClarity.java  QualityOfIntegrity.java  QualityOfPose.java  QualityOfPoseEx.java
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
